[package]
name = "hecs-hierarchy"
version = "0.11.6"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

readme = "README.md"
documentation = "https://docs.rs/hecs-hierarchy"
repository = "https://github.com/ten3roberts/hecs-hierarchy"
description = "Hierachy implementation for Hecs ECS"
license-file = "LICENSE"

keywords = ["gamedev", "ecs", "hierarchy", "hecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.7.6"
hecs-schedule = "0.6.1"
once_cell = "1.9.0"
smallvec = "1.8.0"
