[package]
name = "hecs-hierarchy"
version = "0.11.7"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

readme = "README.md"
documentation = "https://docs.rs/hecs-hierarchy"
repository = "https://github.com/ten3roberts/hecs-hierarchy"
description = "Hierachy implementation for Hecs ECS"
license-file = "LICENSE"

keywords = ["gamedev", "ecs", "hierarchy", "hecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.7.7"
hecs-schedule = { version = "0.6.2", default-features = false }
once_cell = "1.12.0"
smallvec = "1.9.0"
